--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,13 @@
 .interest {
+    flex-basis: 16%;
     border: 1px dotted crimson;
     padding: 1em;
     margin: 0.5em;
+    text-align: center;
 }
 
 .bio__interests {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
